# Agentic-Architecture-EAG-Session6-Assignment

./: .gitignore  README.md  final_prompt.txt  prompt_evaluation.json  pyproject.toml  requirements.txt
extension/: background.js  content.js  manifest.json  options.html  popup.html  popup.js
src/agent_server/: action.py  app.py  decision.py  memory.py  models.py  prompt_eval.py
